Minor code clean-up according to IDE suggestions